# CTRL_ALT_ACS

./: .gitignore  Cargo.toml  README.md  main.py  requirements.txt
donationApp/: App.js  DonationService.js  Navigator.js  app.json  metro.config.js  package-lock.json  package.json
donationApp/android/: settings.gradle
donationApp/android/app/: build.gradle
donationApp/components/: ApprovedScreen.js  Camera.js  DeniedScreen.js  Donation.js  Firebase.js  HomeScreen.js  LoadingScreen.js  LoginScreen.js  SignUpScreen.js  UploadScreen.js
donationApp/ios/: Podfile
donationApp/ios/donationApp.xcodeproj/: project.pbxproj
donationApp/ios/donationApp.xcodeproj/xcshareddata/xcschemes/: donationApp.xcscheme
src/: main.rs
src/models/: models.py
src/vision/: vision.py
