[package]
name = "ctrl_alt_hfh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
base64 = "0.21.4"
diesel = { version = "2.1.3", features = ["sqlite"] }
dotenv = "0.15.0"
log = "0.4.20"
redis = "0.23.3"
serde = { version = "1.0.188", features = ["derive"] }
simplelog = "0.12.1"
